--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 body {
@@ -25,8 +25,8 @@ body {
 }
 
 .nav-bar .nav-logo {
-  width: 75px;
-  height: 75px;
+  height: 250px;
+  margin-top: 13px;
 }
 
 .nav-bar .nav-link-group {
@@ -137,7 +137,7 @@ body {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url('./assets/images/advertisement-and-offer.png');
+  background-image: url("./assets/images/advertisement-and-offer.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -145,8 +145,8 @@ body {
 
 .percentage-number {
   position: absolute;
-  top: 230px;
-  left: 380px;
+  top: 27%;
+  left: 23%;
   font-size: 40px;
   color: #7e5984;
 }
@@ -161,7 +161,7 @@ body {
 .gallery-sec {
   width: 100%;
   height: 100vh;
-  background-image: url('./assets/images/gallery.png');
+  background-image: url("./assets/images/gallery.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -238,7 +238,7 @@ body {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url('./assets/images/footer.png');
+  background-image: url("./assets/images/footer.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -298,4 +298,120 @@ body {
   text-align: center;
   color: #fff;
   background-color: #7e5984;
+}
+
+/* Responsive styles */
+@media screen and (max-width: 991px) {
+  /* Navbar */
+  .nav-bar {
+    padding: 0 32px;
+  }
+  .nav-bar .nav-logo {
+    display: none;
+  }
+
+  /* landing-section */
+  .landing-sec {
+    margin-bottom: 50px;
+  }
+  .landing-sec > .inner {
+    top: 35%;
+  }
+  .landing-sec > .inner > img {
+    display: none;
+  }
+  .landing-content {
+    position: static;
+    text-align: center;
+  }
+  .landing-content-inner {
+    position: static;
+    padding: 16px;
+    color: #fff;
+    background-color: rgba(126, 89, 132, 0.7);
+    border-radius: 4px;
+  }
+
+  /* meet-section */
+  .meet-sec {
+    position: static;
+  }
+  .meet-sec h1 {
+    margin: 0 0 5rem;
+  }
+  .products-list {
+    grid-template-columns: auto;
+    margin-bottom: 5rem;
+    padding: 0 32px;
+  }
+  .products-item .product-img {
+    width: 150px;
+    height: 150px;
+  }
+
+  /* add-section */
+  .add-sec {
+    height: auto;
+    margin: 8rem 0;
+    padding: 0 32px;
+    background-image: none;
+  }
+  .percentage-number {
+    position: static;
+  }
+  .add-info {
+    position: static;
+    color: #7e5984;
+  }
+
+  /* gallery-section */
+  .gallery-sec {
+    padding: 0 32px;
+    height: auto;
+    background-image: none;
+  }
+  .gallery-sec-inner {
+    top: 0;
+  }
+  .gallery-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 16px;
+    text-align: center;
+    margin: 5rem 0;
+  }
+  .gallery-grid-item img {
+    width: 120px;
+    height: 120px;
+  }
+
+  /* about-section */
+  .about-sec {
+    max-width: 100%;
+    padding: 0 32px;
+  }
+
+  /* map-section */
+  .map-sec {
+    max-width: 100%;
+    padding: 0 32px;
+  }
+  .map-sec iframe {
+    width: 100%;
+    margin: 3rem 0;
+  }
+
+  /* footer-section */
+  .footer-sec {
+    height: auto;
+    background-image: none;
+  }
+  .footer-inner {
+    position: static;
+    padding: 0 32px;
+  }
+  .footer-bar {
+    position: static;
+    margin-top: 20px;
+  }
 }
